# scholarshipright

./: .env.example  .gitignore  P2-CLEANUP-COMPLETE.md  README.md  docker-compose.yml  dump.rdb
backend/: .env.example  alembic.ini  benchmark.py  pyproject.toml  pytest.ini  requirements.txt  start-production.sh
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: admin_audit.py  admin_bulk.py  admin_extract.py  admin_groups.py  admin_invites.py  admin_matches.py  admin_mcp_keys.py  admin_mcp_logs.py  admin_overview.py  admin_review.py  admin_scholarships.py  admin_users.py  agent.py  auth.py  blog.py  chat.py  matches.py  mcp_sse.py  notifications.py  preferences.py  reminders.py  resumes.py  saved.py  scholarships.py  unsubscribe.py  users.py
backend/app/core/: admin.py  cache.py  config.py  (+4 more)
backend/scripts/: embed_scholarships.py  resolve_eligibility.py  send_reminders.py
backend/seeds/: scholarships.json  scrape.py  scraped_chevening.org.json  scraped_daad.de.json  scraped_fulbrightonline.org.json  scraped_gatescambridge.org.json  scraped_marie-sklodowska-curie-actions.ec.europa.eu.json  scraped_rhodeshouse.ox.ac.uk.json  seed_scholarships.py  sources.json
backend/tests/: conftest.py  test_api_admin_groups.py  test_api_admin_overview.py  test_api_admin_users.py  test_api_blog.py  test_api_matches.py  test_api_mcp_keys.py  test_api_notifications.py  test_api_preferences.py  test_api_remaining.py  test_api_resumes.py  test_api_review.py  test_api_saved.py  test_api_scholarships.py  test_api_users.py  test_mcp.py  test_models.py  test_services.py
(+321 files in other folders)
