[project]
name = "scholarshipright-backend"
version = "0.1.0"
description = "ScholarshipRight API — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi==0.138.2",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",

    # Database
    "sqlalchemy[asyncio]==2.0.51",
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pgvector==0.4.2",

    # Auth
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "authlib==1.7.2",
    "joserfc==1.7.2",

    # HTTP client
    "httpx==0.28.1",

    # Redis
    "redis==8.0.1",

    # PDF processing
    "fpdf2==2.8.3",
    "pdfplumber==0.11.10",
    "pymupdf==1.28.0",
    "pillow==12.3.0",

    # Email / validation
    "email-validator==2.3.0",

    # Markdown (blog body rendering)
    "markdown==3.8",
    "bleach==6.2.0",

    # Environment / config
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "PyYAML==6.0.3",
]
